# LowGermanSpeech

./: .gitignore  README.md  pyproject.toml
sandbox/: config.py  helper.py  train_vits_win.py
